# pyawx

./: README.md  pyproject.toml
.github/workflows/: release.yaml
src/: auth.py  http.py  models.py  resources.py
src/pyawx/: __init__.py  client.py  http.py  models.py
src/pyawx/models/: __init__.py  enums.py  job_template.py  workflow_job_template.py
src/pyawx/resources/: __init__.py  adapter.py  job_template.py  resource.py  workflow_job_template.py
tests/: conftest.py  test_auth.py  test_client.py  test_http.py  test_resources.py
