[project]
name = "pyawx"
version = "0.1.0"
description = "Python client for managing AWX automation platform"
readme = "README.md"
authors = [{ name = "srlasagne" }]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.10.6", "requests>=2.32.3"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
